@@ -14,6 +14,7 @@ update-manager (1:0.59.12) feisty; urgency=low
     - fix incorrect auto-installed information from meta-pkgs 
       (LP#86921)
     - rewrite /etc/fstab cdrom entries (LP#86424,#79327)
+    - fix upgrade for people with no admin group (LP#93279)
   * dist-upgrade.py:
     - support fallback when a frontend view can not be imported
       (LP#89568)
